syntax = "proto2";
option java_outer_classname = "ProtoES";

package proto.eventstore;

service EventStore {

    rpc info (InfoReq) returns (InfoResp) {
    }

    rpc write (WriteReq) returns (WriteResp) {
    }

    rpc read (ReadReq) returns (stream DataResp) {
    }

    rpc stream (StreamReq) returns (stream DataResp) {
    }

    rpc delete (DelReq) returns (DelResp) {
    }
}

message InfoReq {
    required string path = 1; // leave blank for all streams
}

message InfoResp {
    repeated StreamInfo streams = 1;
}

message StreamInfo {
    required string path = 1;
    required int64 size = 2;
    required int64 length = 3;
}

message WriteReq {
    optional string path = 1;
    repeated bytes data = 2;
}

message WriteResp {
    required bool success = 1;
    optional string error = 2;
}

message ReadReq {
    required string path = 1;
    optional int64 start = 2 [default = -1];
    optional int64 end = 3 [ default = -1];
}
message StreamReq {
    required string path = 1;
}

message DataResp {
    required bool success = 1;
    repeated Event events = 2;
    optional string error = 3;
}

message Event {
    required int64 index = 1;
    required bytes data = 2;
}

message DelReq {
    optional string changeMe = 1;
}

message DelResp {
    optional string changeMe = 1;
}

message EventStoreConfig {
    required string path = 1;
    required int32 port = 2;
}